feat: add meeting

--- a/post/团队招募会.md
+++ b/post/团队招募会.md
@@ -7,6 +7,10 @@ priority: high
 
 # 项目启动会议
 
+>Meeting Topic: 团队招募会议
+>Time: 2025/08/25 14:00-14:50 (GMT+08:00) 
+>#腾讯会议：889-922-226
+
 ## 会议内容
 
 ### 机器人实验室团队架构介绍
